🐛MAJOR FIX: fixed some annoying bugs
1. bug where client cannot ask gemini
2. fixed the bug where the session cleanup worker spams the user, which is very annoying
3. formatted some code in the app

future update:
reformat the structure of the app because it is aweful.

--- a/testserver-assests/index.html
+++ b/testserver-assests/index.html
@@ -54,7 +54,9 @@
     
     
   </div>
-  <script src="showdown.min.js"></script>
-  <script src="main.js"></script>
+  <script src="/eruda.js"></script>
+  <script>eruda.init()</script>
+  <script src="/showdown.min.js"></script>
+  <script src="/main.js"></script>
 </body>
 </html>
