refactor: :fire: codebase refactor and updated dependencies
Refactored the whole codebase, removes some features temporarily, fixed faulty debugging tools configuration(jest) and migrated to the new google ai sdk

--- a/testserver-assests/index.html
+++ b/testserver-assests/index.html
@@ -44,7 +44,7 @@
             <div class="card-header">
               <p class="text-center mb-0">MESSAGES</p>
               </div>
-            <div class="card-body h-100" id="log-container">
+            <div class="card-body" id="log-container">
               
             </div>
           </div>
@@ -55,7 +55,7 @@
     
   </div>
   <script src="/eruda.js"></script>
-  <script>eruda.init()</script>
+  <!-- <script>eruda.init()</script> -->
   <script src="/showdown.min.js"></script>
   <script src="/main.js"></script>
 </body>
